<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/bg_design">

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:layout_marginBottom="80dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="22dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="16dp">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:contentDescription="@string/login_description"
        app:srcCompat="@drawable/ic_launcher_background"/>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/student_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/student_name"
          android:inputType="text"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/college"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/college_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/college_name"
          android:inputType="text"/>
      </android.support.design.widget.TextInputLayout>

      <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"/>

    </LinearLayout>
  </android.support.v7.widget.CardView>
</LinearLayout>